Minor code opimization